@@ -887,7 +887,8 @@ local inline void check_initialization_argument_list (uintL argcount, object cal
     do {
       if (!symbolp(Next(argptr))) {
         pushSTACK(Next(argptr)); pushSTACK(caller);
-        fehler(error,"~S: invalid initialization argument ~S");
+        /* ANSI CL 3.5.1.5. wants a PROGRAM-ERROR here. */
+        fehler(program_error,"~S: invalid initialization argument ~S");
       }
       argptr skipSTACKop -2;
       argcount -= 2;
