@@ -1,3 +1,9 @@
+2004-04-25  Bruno Haible  <bruno@clisp.org>
+
+	* record.d (check_initialization_argument_list): Change error type
+	to PROGRAM-ERROR.
+	* clos-class5.lisp (check-initialization-argument-list): Likewise.
+
 2004-05-16  Sam Steingold  <sds@gnu.org>
 
 	* modules/berkeley-db/bdb.c (BDB:ENV-CREATE): 4.2 uses
